# management-system

./: Cargo.toml  README.md  contenidos.md  example.env  guia.md
.github/workflows/: ci.yml  develop.yml  main.yml  rust.yml
docs/: contenidos.md  git-buenas-practicas.md  guia.md
src/: main.rs
src/application/: mod.rs
src/application/auth/: login.rs  register.rs
src/application/employee/: create_employee.rs  delete_employee.rs  list_employee.rs  mod.rs  update_employee.rs
src/domain/: errors.rs  mod.rs
src/domain/entities/: employee.rs
src/domain/ports/: employee_repository.rs  external_api.rs  mod.rs
src/domain/value_objects/: email.rs  mod.rs  password_hash.rs
src/infrastructure/: mod.rs
src/infrastructure/cli/: menu.rs
src/infrastructure/external_api/: country_api_adapter.rs  mod.rs
src/infrastructure/persistence/: in_memory_employee_repository.rs  mod.rs  postgres_employee_repo.rs  postgres_employee_repository.rs  schema.sql
tests/: employee_use_cases_test.rs
