[package]
name = "sistema_gestion"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialización / Deserialización (equivalente a Pydantic)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base de datos (ORM async)
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }

# Password Hash
argon2 = { version = "0.5.3", features = ["std"] }

# Cliente HTTP para consumo de APIs externas
reqwest = { version = "0.11", features = ["json"] }

# Variables de entorno
dotenvy = "0.15"

# Manejo de errores profesional
thiserror = "1"
anyhow = "1"

# UUIDs para IDs
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
rust_decimal = "1.41.0"
colored = "3.1.1"
regex = "1.12.3"


[dev-dependencies]
tokio-test = "0.4"
