[package]
name = "sistema_gestion"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Core & Async ---
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1.89"

# --- Data & Infrastructure ---
reqwest = { version = "0.13.2", features = ["json"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }

# --- Serialization & Types ---
rust_decimal = "1.41.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v4"] }

# --- Logic & Security ---
argon2 = { version = "0.5.3", features = ["std"] }
regex = "1.12.3"

# --- Error Handling & Observability ---
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# --- Utils ---
colored = "3.1.1"
dotenvy = "0.15.7"

[dev-dependencies]
tokio-test = "0.4.5"
